--- a/src/globals/scss/_theme-tokens.scss
+++ b/src/globals/scss/_theme-tokens.scss
@@ -201,8 +201,8 @@
   $data-table-row-height: 2rem !default !global;
 
   // Date Picker
-  $in-range-background-color: $ibm-colors__blue--20 !default !global;
-  $next-month-color: $ibm-colors__gray--60 !default !global;
+  $date-picker-in-range-background-color: $ibm-colors__blue--20 !default !global;
+  $date-picker-next-month-color: $ibm-colors__gray--60 !default !global;
 
   // Modal
   $modal-border-top: $brand-01 4px solid !default !global;
